Dependency overhaul (#86)
* test: Migrate all unit tests to JUnit 5

* refactor: Format source files

* build(deps): Replace commons-lang with commons-text

* build(deps): Replace deprecated javax.xml.bind with jakarta.xml.bind

* refactor: Adjust repository urls to tls-attacker org

* refactor: Set source version for maven-javadoc-plugin from property

* build(plugins): Convert maven-jar-plugin to explicit plugin

* build(deps): Switch to JUnit 5 aggregation package

* build(deps): Bump Log4j to 2.19.0

* build(plugins): Bump plugin versions to latest